--- a/configuration.yaml
+++ b/configuration.yaml
@@ -77,6 +77,8 @@ tts:
 # Cloud
 cloud:
 
+zwave:
+
 group: !include groups.yaml
 automation: !include automations.yaml
 script: !include scripts.yaml
