--- a/customize.yaml
+++ b/customize.yaml
@@ -6,3 +6,7 @@ light.yeelight_rgb_34ce008d0087:
 group.all_lights:
   hidden: false
   friendly_name: Lumières
+
+group.all_covers:
+  hidden: false
+  friendly_name: Volets
