--- a/configuration.yaml
+++ b/configuration.yaml
@@ -77,6 +77,11 @@ tts:
 # Cloud
 cloud:
 
+camera:
+  - platform: generic
+    name: Salon
+    still_image_url: 192.168.0.8/image.jpg
+
 zwave:
   usb_path: /dev/ttyACM0
 
