--- a/groups.yaml
+++ b/groups.yaml
@@ -7,6 +7,7 @@ default_view:
     - group.all_lights
     - group.all_switches
     - group.all_medias
+    - camera.salon
 
 equipement:
   view: yes
