--- a/groups.yaml
+++ b/groups.yaml
@@ -8,6 +8,7 @@ default_view:
     - group.all_switches
     - group.all_medias
     - camera.salon
+    - input_boolean.night_mode
 
 equipement:
   view: yes
