--- a/configuration.yaml
+++ b/configuration.yaml
@@ -89,7 +89,7 @@ input_boolean:
   night_mode:
     name: Mode nuit
     initial: off
-    icon: mdi:moon
+    icon: mdi:weather-night
 
 group: !include groups.yaml
 automation: !include automations.yaml
