--- a/groups.yaml
+++ b/groups.yaml
@@ -9,6 +9,7 @@ default_view:
     - group.all_medias
     - camera.salon
     - input_boolean.night_mode
+    - input_boolean.away_mode
 
 equipement:
   view: yes
