--- a/customize.yaml
+++ b/customize.yaml
@@ -15,5 +15,5 @@ group.all_switches:
   hidden: false
   friendly_name: Interrupteurs
 
-#group.modes:
-#  friendly_name: Modes
+group.modes:
+  friendly_name: Modes
