--- a/automations.yaml
+++ b/automations.yaml
@@ -21,5 +21,5 @@
   action:
     service: light.turn_on
     data:
-      entity_id: light.salon
-      brightness: 1
+      entity_id: light.yeelight_rgb_34ce008bc436
+      brightness: 25
