--- a/customize.yaml
+++ b/customize.yaml
@@ -28,6 +28,8 @@ group.all_covers:
   friendly_name: Volets
 cover.fibaro_system_fgrm222_roller_shutter_controller_2_level:
   friendly_name: Baie salon
+cover.fibaro_system_fgrm222_roller_shutter_controller_2_level_2:
+  friendly_name: Porte cuisine
 cover.fibaro_system_fgrm222_roller_shutter_controller_2_level_3:
   friendly_name: Chambre RDC  
 cover.fibaro_system_fgrm222_roller_shutter_controller_2_level_7:
