--- a/customize.yaml
+++ b/customize.yaml
@@ -35,5 +35,9 @@ cover.fibaro_system_fgrm222_roller_shutter_controller_2_level_3:
 cover.fibaro_system_fgrm222_roller_shutter_controller_2_level_7:
   friendly_name: Pano salon
 
+# Sensors
+sensor.fibaro_system_fgms001_motion_sensor_temperature:
+  friendly_name: Temp. RDC
+
 group.modes:
   friendly_name: Modes
