--- a/customize.yaml
+++ b/customize.yaml
@@ -43,7 +43,7 @@ cover.fibaro_system_fgrm222_roller_shutter_controller_2_level_7:
 
 # Sensors
 sensor.fibaro_system_fgms001_motion_sensor_temperature:
-  friendly_name: Temp. RDC
+  friendly_name: RDC
 
 group.modes:
   friendly_name: Modes
