--- a/groups.yaml
+++ b/groups.yaml
@@ -2,7 +2,7 @@ default_view:
   view: yes
   icon: mdi:home 
   entities:
-    - sensor.trajet_aller_sii
+    - sensor.vers_sii
     - sensor.fibaro_system_fgms001_motion_sensor_temperature
     - group.all_covers
     - group.all_lights
