--- a/zones.yaml
+++ b/zones.yaml
@@ -9,3 +9,15 @@
   longitude: -1.622917
   radius: 250
   icon: mdi:briefcase
+
+-name: CA St Martin
+  latitude: 48.1228487
+  longitude: -1.6868182
+  radius: 250
+  icon: mdi:bank
+
+-name: CA Bourg L'Evêque
+  latitude: 48.1112169
+  longitude: -1.6917782
+  radius: 250
+  icon: mdi:bank
