--- a/configuration.yaml
+++ b/configuration.yaml
@@ -85,6 +85,8 @@ light:
         name: Chambre Axelle
       192.168.0.2:
         name: Salon
+      192.168.0.26
+        name: Bandeau LED
 
 # Text to speech
 tts:
