fix(scripts): open/close covers

--- a/scripts.yaml
+++ b/scripts.yaml
@@ -1,11 +1,13 @@
 ouverture_volets:
   alias: Ouverture volets
-  service: cover.open_cover
-  data:
-    entity_id: group.all_covers
+  sequence:
+    - service: cover.open_cover
+      data:
+        entity_id: group.all_covers
 
 fermeture_volets:
   alias: Fermeture volets
-  service: cover.close_cover
-  data:
-    entity_id: group.all_covers
+  sequence:
+    - service: cover.close_cover
+      data:
+        entity_id: group.all_covers
