--- a/groups.yaml
+++ b/groups.yaml
@@ -21,7 +21,7 @@ equipement:
     - sensor.speedtest_download
     - sensor.speedtest_upload
     - zone.home
-    - group.ha_monitor
+    # - group.ha_monitor
 
 all_medias:
   entities:
@@ -41,11 +41,11 @@ actions:
     - script.ouverture_volets
     - script.fermeture_volets
 
-# ha_monitor:
-#   view: no
-#   name: Monitor
-#   entities:
-#     - sensor.disk_use_percent_
-#     - sensor.processor_use
-#     - sensor.memory_use_percent
-#     - sensor.sensor.load_15m
+ha_monitor:
+  view: no
+  name: Monitor
+  entities:
+    - sensor.disk_use_percent_
+    - sensor.processor_use
+    - sensor.memory_use_percent
+    - sensor.sensor.load_15m
