--- a/groups.yaml
+++ b/groups.yaml
@@ -1,10 +1,7 @@
 default_view:
   view: yes
   icon: mdi:home 
-  entities:
-    - sensor.vers_sii
-    - sensor.vers_st_martin
-    - sensor.vers_bourg_leveque
+  entities:    
     - sensor.fibaro_system_fgms001_motion_sensor_temperature
     - group.actions
     - group.modes
@@ -14,14 +11,27 @@ default_view:
     - camera.salon
     - group.all_medias
 
+car:
+  view: yes
+  icon: mdi:car-side
+  entities:
+    - group.travel
+
+travel:
+  name: Trajets
+  view: no
+  entities:
+    - sensor.vers_sii
+    - sensor.vers_st_martin
+    - sensor.vers_bourg_leveque
+
 equipement:
   view: yes
   icon: mdi:server
   entities:
     - sensor.speedtest_download
-    - sensor.speedtest_upload
-    - zone.home
-    # - group.ha_monitor
+    - group.internet
+    - group.ha_monitor
 
 all_medias:
   entities:
@@ -45,7 +55,17 @@ ha_monitor:
   view: no
   name: Monitor
   entities:
-    - sensor.disk_use_percent_
     - sensor.processor_use
     - sensor.memory_use_percent
-    - sensor.sensor.load_15m
+    - sensor.load_15m
+    - sensor.disk_use_percent
+
+internet:
+  view: no
+  name: Internet
+  entities: 
+    - sensor.speedtest_download
+    - sensor.speedtest_upload
+    - sensor.fastcom_download
+
+  
