--- a/groups.yaml
+++ b/groups.yaml
@@ -12,6 +12,7 @@ default_view:
     - group.all_medias
 
 lights:
+  name: Lumières
   view: no
   entities:
     - light.salon
@@ -21,6 +22,7 @@ lights:
     - light.bandeau_led
 
 switches:
+  name: Interrupteurs
   view: no
   entities:
     - switch.neo_coolcam_power_plug_12a_switch_2
