--- a/groups.yaml
+++ b/groups.yaml
@@ -3,6 +3,7 @@ default_view:
   icon: mdi:home 
   entities:    
     - sensor.fibaro_system_fgms001_motion_sensor_temperature
+    - sensor.fibaro_system_fgsd002_smoke_sensor_temperature
     - group.actions
     - group.modes
     - group.lights
