--- a/customize.yaml
+++ b/customize.yaml
@@ -48,6 +48,8 @@ cover.fibaro_system_fgrm222_roller_shutter_controller_2_level_7:
 # Sensors
 sensor.fibaro_system_fgms001_motion_sensor_temperature:
   friendly_name: RDC
+sensor.fibaro_system_fgsd002_smoke_sensor_temperature:
+  friendly_name: Etage
 
 script.fermeture_volets:
   icon: mdi:arrow-collapse-down
