--- a/configuration.yaml
+++ b/configuration.yaml
@@ -59,8 +59,7 @@ recorder:
       - cover.fibaro_system_fgrm222_roller_shutter_controller_2_level_7
       - sensor.fibaro_system_fgms001_motion_sensor_temperature
       - sensor.fibaro_system_fgsd002_smoke_sensor_temperature
-      - 
-
+      - binary_sensor.fibaro_system_fgms001_motion_sensor_sensor
 
 # View all events in a logbook
 logbook:
