--- a/automations.yaml
+++ b/automations.yaml
@@ -69,3 +69,18 @@
   - service: input_boolean.turn_off
     data:
       entity_id: input_boolean.night_mode
+
+- id: leave_home
+  alias: Départ
+  trigger:
+    platform: zone
+    entity_id: device_tracker.homeassistant_marcohonor
+    zone: zone.home
+    event: leave
+  action:
+    - service: input_boolean.turn_on
+      data:
+        entity_id: input_boolean.away_mode
+    - service: switch.turn_on
+      data:
+        entity_id: switch.neo_coolcam_power_plug_12a_switch_2
