--- a/configuration.yaml
+++ b/configuration.yaml
@@ -95,52 +95,6 @@ mqtt:
 device_tracker:
   - platform: owntracks
 
-# Weather prediction
-sensor:  
-  - platform: google_travel_time
-    api_key: !secret google_map_api_key
-    origin: zone.Home
-    destination: zone.SII
-    name: vers SII
-  - platform: google_travel_time
-    api_key: !secret google_map_api_key
-    origin: zone.Home
-    destination: CA St Martin
-    name: vers St Martin
-  - platform: google_travel_time
-    api_key: !secret google_map_api_key
-    origin: zone.Home
-    destination: CA Bourg L'Evêque
-    name: vers Bourg L'Evêque
-
-  - platform: speedtest
-    minute: 30
-    hour:
-      - 8
-      - 18
-    monitored_conditions:
-      - ping
-      - download
-      - upload
-
-  - platform: fastdotcom
-    hour:
-      - 9
-      - 19
-
-  - platform: systemmonitor
-    resources:
-      - type: disk_use_percent
-        arg: /
-      - type: memory_use_percent
-      - type: processor_use
-      - type: load_15m
-
-  - platform: broadlink_power
-    host: 192.168.0.25
-    mac: '34:EA:34:9D:27:5C'
-    name: Prise voiture
-
 light:
   - platform: yeelight
     devices:
@@ -179,17 +133,6 @@ camera:
 zwave:
   usb_path: /dev/ttyACM0
 
-input_boolean:
-  night_mode:
-    name: Mode nuit
-    icon: mdi:weather-night
-  away_mode:
-    name: Absence
-    icon: mdi:account-remove
-  holiday_mode:
-    name: Congés
-    icon: mdi:sunglasses
-
 binary_sensor:
   - platform: workday
     country: FRA
@@ -201,6 +144,8 @@ panel_iframe:
     url: http://192.168.0.24:7681
 
 
+input_boolean: !include input_boolean.yaml
+sensor:  !include sensor.yaml
 group: !include groups.yaml
 automation: !include automations.yaml
 script: !include scripts.yaml
