--- a/groups.yaml
+++ b/groups.yaml
@@ -5,6 +5,7 @@ default_view:
     - sensor.fibaro_system_fgms001_motion_sensor_temperature
     - sensor.fibaro_system_fgsd002_smoke_sensor_temperature
     - device_tracker.homeassistant_marcohonor
+    - sensor.prise_voiture
     - group.actions
     - group.modes
     - group.lights
