--- a/groups.yaml
+++ b/groups.yaml
@@ -6,6 +6,7 @@ default_view:
     - sensor.fibaro_system_fgsd002_smoke_sensor_temperature
     - device_tracker.homeassistant_marcohonor
     - sensor.prise_voiture
+    - binary_sensor.car_charging
     - group.actions
     - group.modes
     - group.lights
