--- a/groups.yaml
+++ b/groups.yaml
@@ -5,7 +5,7 @@ default_view:
     - sensor.fibaro_system_fgms001_motion_sensor_temperature
     - sensor.fibaro_system_fgsd002_smoke_sensor_temperature
     - device_tracker.homeassistant_marcohonor
-    - sensor.prise_voiture    
+    - binary_sensor.car_charging
     - group.actions
     - group.modes
     - group.lights
@@ -34,7 +34,7 @@ switches:
 car:
   view: yes
   icon: mdi:car-side
-  entities:
+  entities:    
     - binary_sensor.car_charging
     - group.car_switch
     - group.travel
