--- a/configuration.yaml
+++ b/configuration.yaml
@@ -72,7 +72,7 @@ switch:
     host: 192.168.0.25
     mac: '34:EA:34:9D:27:5C'
     type: sp3
-    friendly_name: Prise voiture
+    friendly_name: Prise garage
 
 # Text to speech
 tts:
@@ -98,18 +98,6 @@ zwave:
 binary_sensor:
   - platform: workday
     country: FRA
-
-  - platform: template
-    sensors:
-      car_charging:
-        friendly_name: "En charge"
-        icon_template: >-
-          {% if states('sensor.prise_voiture')|float > 2000 %}
-            mdi:battery-charging-30
-          {% else %}
-            mdi:battery-charging
-          {% endif %}
-        value_template: "{{ states('sensor.prise_voiture')|float > 2000}}"
 
 panel_iframe:
   terminal:
