--- a/sensor.yaml
+++ b/sensor.yaml
@@ -41,4 +41,26 @@
 - platform: broadlink_power
   host: 192.168.0.25
   mac: '34:EA:34:9D:27:5C'
-  name: Prise voiture
+  name: Prise garage
+
+- platform: template
+  sensors:
+    garage_plug:
+      friendly_name: "Garage"
+      unit_of_measurement: 'charge'
+      icon_template: >-
+        {% if states('swith.prise_garage', 'off') %}
+          mdi:power-plug-off
+        {% elif states('sensor.prise_garage')|float > 2000 %}
+          mdi:battery-charging-30
+        {% else %}
+          mdi:battery-charging
+        {% endif %}
+      value_template: >-
+        {% if states('swith.prise_garage', 'off') %}
+          Off
+        {% elif states('sensor.prise_garage')|float > 2000 %}
+          Voiture
+        {% else %}
+          Chargé
+        {% endif %}
