change condition template

--- a/sensor.yaml
+++ b/sensor.yaml
@@ -47,7 +47,7 @@
   sensors:
     garage_plug:
       friendly_name_template: >-
-        {% if states('switch.prise_garage', 'off') %}
+        {% if is_state('switch.prise_garage', 'off') %}
           Garage
         {% elif states('sensor.prise_garage')|float > 2000 %}
           Voiture
@@ -55,7 +55,7 @@
           Garage
         {% endif %}
       icon_template: >-
-        {% if states('swicth.prise_garage', 'off') %}
+        {% if is_state('swicth.prise_garage', 'off') %}
           mdi:power-plug-off
         {% elif states('sensor.prise_garage')|float > 2000 %}
           mdi:battery-charging-30
@@ -63,7 +63,7 @@
           mdi:battery-charging
         {% endif %}
       value_template: >-
-        {% if states('switch.prise_garage', 'off') %}
+        {% if is_state('switch.prise_garage', 'off') %}
           Rien
         {% elif states('sensor.prise_garage')|float > 2000 %}
           Voiture
