--- a/sensor.yaml
+++ b/sensor.yaml
@@ -41,6 +41,7 @@
 - platform: template
   sensors:
     garage_plug:
+      unit_of_measurement: charge
       friendly_name_template: >-
         {% if is_state('switch.prise_garage', 'off') %}
           Garage
@@ -59,9 +60,9 @@
         {% endif %}
       value_template: >-
         {% if is_state('switch.prise_garage', 'off') %}
-          Rien
+          Eteint
         {% elif states('sensor.prise_garage')|float > 2000 %}
           Voiture
         {% else %}
-          Chargé
+          Chargée
         {% endif %}        
