--- a/groups.yaml
+++ b/groups.yaml
@@ -96,6 +96,7 @@ internet:
   entities: 
     - sensor.speedtest_download
     - sensor.speedtest_upload
+    - sensor.speedtest_ping
     - sensor.fastcom_download
 
   
