--- a/groups.yaml
+++ b/groups.yaml
@@ -11,6 +11,7 @@ default_view:
     - group.lights
     - group.all_covers
     - group.switches
+    - group.tv
     - camera.salon
     - group.all_medias
 
@@ -30,6 +31,12 @@ switches:
   entities:
     - switch.neo_coolcam_power_plug_12a_switch_2
     - switch.prise_garage
+
+tv:
+  name: TV
+  view: no
+  entities:
+    - input_number.tv_timer
 
 car:
   view: yes
