--- a/automations.yaml
+++ b/automations.yaml
@@ -99,3 +99,12 @@
     - service: switch.turn_off
       data:
         entity_id: switch.neo_coolcam_power_plug_12a_switch_2
+
+- id: timer_chromecast
+  alias: Minuteur Chromecast
+  trigger:
+    platform: state
+    entity_id: input_number.tv_timer
+  action:
+    - delay: '00:{{ states.input_number.tv_timer.state | int }}:00'
+    - service: media_player.turn_off
