--- a/automations.yaml
+++ b/automations.yaml
@@ -105,6 +105,16 @@
   trigger:
     platform: state
     entity_id: input_number.tv_timer
+  condition:
+    - condition: template
+      value_template: '{{ states.input_number.tv_timer.state | int != 0 }}'
   action:
     - delay: '00:{{ states.input_number.tv_timer.state | int }}:00'
     - service: media_player.turn_off
+      data:
+        entity_id: media_player.chromecast_salon 
+    - service: input_number.set_value
+      data:
+        entity_id: input_number.tv_timer
+        value: 0
+
